--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.1.0",
     "@mui/styled-engine-sc": "^5.0.4",
     "@mui/system": "^5.0.6",
+    "@sandstreamdev/react-swipeable-list": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
