--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.3.8",
     "react-scripts": "4.0.3",
+    "style-components": "^0.1.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
